[package]
name = "rubon"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
ziku-algorithms = "0.1.3"
libp2p-core = { version = "0.36.0", default-features = false }
bytes = "1"
prost = "0.11"
asynchronous-codec = "0.6"
futures = "0.3.1"
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }

[build-dependencies]
prost-build = "0.11"
